# freezebot

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
evrone_freezebot/: main.py  settings.py
tests/: test_offer.py
